capture frames from webcam

--- a/test/test.html
+++ b/test/test.html
@@ -1,1 +1,5 @@
-<h1>this is a test</h1> 
+<ng-face-detector width="320"
+                  height="240"
+                  on-detect="test.onDetect(faces)"
+                  ng-if="test.active">
+</ng-face-detector>
