--- a/test/index.html
+++ b/test/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible"
+          content="ie=edge">
+    <title>Face Detector</title>
 </head>
+
 <body ng-app="test-module">
     <test-component></test-component>
     <script src="ng-face-detection.js"></script>
     <script src="test.js"></script>
 </body>
+
 </html>
